--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,19 +1,13 @@
-.placeholder {
+.col * {
     width: 100%;
-    background-color: #eee;
     margin-bottom: 10px;
+}
+
+.placeholder {
+    background-color: #eee;
 }
 
 #loading {
-    float: left;
-    display: none;
-    position: relative;
-    bottom: 50px;
-    padding: 10px;
-    background-color: #fff9;
-}
-
-img {
-    width: 100%;
-    margin-bottom: 10px;
+    position: fixed;
+    bottom: 0px;
 }
